--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
             <li><a href="#journey" class="nav-link">Journey</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
-            <li><a href="#facts" class="nav-link">Facts</a></li>
+            <li><a href="/journal/" class="nav-link">Journal</a></li>
             <li><a href="#contact" class="nav-link nav-link-cta">Contact</a></li>
         </ul>
     </div>
